--- a/style.css
+++ b/style.css
@@ -41,18 +41,29 @@ header {
 }
 
 .nav-mobile {
-  position: absolute;
+  position: fixed;
   right: 0;
   top: 0;
   height: 100vh;
   width: 75%;
-  background-color: white;
+  background-color: rgb(255, 255, 255);
   display: flex;
   align-items: center;
   justify-content: start;
   padding-left: 50px;
   transform: translateX(100%);
   transition: transform 0.5s ease;
+  z-index: 10;
+}
+
+.nav-mobile-backdrop {
+  position: fixed;
+  right: 0;
+  top: 0;
+  height: 100vh;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  transform: translateX(100%)
 }
 
 .nav-mobile ul {
@@ -62,7 +73,7 @@ header {
 }
 
 .nav-mobile ul li {
-  font-size: 2em;
+  font-size: 1.5em;
 }
 
 .nav-mobile ul li:hover,
